# regtrace

./: .gitattributes  .gitignore  README.md  SPEC.md  bootstrap.toml  implementation-log.md  pyproject.toml
.github/workflows/: regtrace.yml
decisions/: TEMPLATE.md
decisions/v0.1/: ADC.md  TIMER.md
decisions/v0.2/: ADC.md  DMA.md  I2C.md  IWDG.md  USART.md
decisions/v0.5/: IWDG.md  TIMER.md
decisions/v0.5+/: ADC.md  FLASH.md  RCC.md  TIMER.md
docs/: adding-a-new-architecture.md  adding-a-new-library.md  adding-a-new-target.md  agent-runbook.md
draft-prs/v0.2/: 0001-gd32-f1x0-add-IWDG-FWDGT-support-by-sharing-stm32-co.patch  gd32f1x0-iwdg-PR-DESCRIPTION.md
draft-prs/v0.5/: 0001-gd32-f10x-initial-port-stub-TIMER-IWDG-via-stm32-com.patch  gd32f10x-port-PR-DESCRIPTION.md
findings/v0.4/: no-libopencm3-bugs-found.md
src/regtrace/: __init__.py  bootstrap.py  cli.py  paths.py  selftest.py  targets.py  vectors.py
targets/: gd32f10x.toml  gd32f1x0.toml  gd32vf103.toml  stm32f0.toml  stm32f1.toml  stm32f4.toml
tests/: test_compare.py  test_filters.py  test_synthetic_regression.py  test_targets.py  test_trace_extractor.py  test_vectors.py
vectors/adc/: calibration_enable.yaml  scan_dma_circular_t3trgo.yaml  single_channel_right_aligned.yaml
vectors/dma/: m2m_8bit.yaml  p2m_circular_16bit.yaml  transfer_complete_irq.yaml
vectors/flash/: page_erase.yaml  word_write.yaml
vectors/gpio/: output_pa5_pp_50mhz.yaml
vectors/i2c/: init_100khz_7bit.yaml  peripheral_disable.yaml
vectors/iwdg/: config_2sec_period.yaml
vectors/rcc/: irc8m_pll_72mhz.yaml
(+161 files in other folders)
